--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauerworkshop.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauerworkshop.tex
@@ -15,7 +15,7 @@
 \parindent=0pt
 \parskip=\baselineskip
 
-% Please leave SVN version number $Revision: 453 $
+% Please leave SVN version number $Revision$
 % Remember to enter the SVN command 
 %      svn propset svn:keywords "Revision" thisFile.tex
 
