--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -8,11 +8,12 @@
 \parindent=0pt
 \parskip=\baselineskip
 
-% Please leave SVN version number $Revision: 453 $
+% Please leave SVN version number $Revision$
 % Remember to enter the SVN command 
 %      svn propset svn:keywords "Revision" thisFile.tex
 
 \begin{document}
+
 
 \title{Instance-Based Parameter Tuning\\
 for Evolutionary AI Planning}
